pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: webserver
  labels:
    app: webapp

spec:
  containers:
    - name: webserver
      image: nginx
