springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: hello-spring
  ports:
    - protocol: TCP
      port: 8080         # port du service
      targetPort: 8080   # port du conteneur Spring Boot
      nodePort: 30080    # port accessible depuis la machine
